# BHA-Engine

./: CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
TEMPLATES/: device_template.py  example_device.yaml
agents/: agent_coordinator.py
src/audio/: audio_engine.py  mixer.py  monitoring.py  playback.py  recorder.py  track.py
src/core/: daw_engine.py
src/effects/: effects_chain.py
src/effects/processors/: compressor.py  delay.py  eq.py  factory_integration.py  reverb.py  saturation.py
src/gui/: main_application.py
src/gui/components/: effects_widget.py  mixer_widget.py  rhythm_wolf_widget.py  sample_browser.py  sequencer_widget.py  transport_widget.py  virtual_knobs.py  vu_meter.py
src/gui/styles/: blueprint_theme.py
src/hardware/: hardware_manager.py
src/hardware/devices/akai/: rhythm_wolf.py
src/midi/: auto_record.py  bpm_sync.py  integration_example.py  midi_handler.py  midi_testing.py
