[project]
name = "bsa-engine"
version = "0.1.0"
description = "Base Hardware Abstraction Engine for modular MIDI device integration"
license = "MIT"
authors = [{name = "M. Ligtenberg", email = "info@michligtenberg.nl"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mido",
    "python-rtmidi",
    "PyYAML"
]

[tool.black]
line-length = 88

[tool.mypy]
strict = true

[tool.pylint]
disable = ["C0114"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
